--- a/AED_FINAL1/AED_FINAL1/inicio.resx
+++ b/AED_FINAL1/AED_FINAL1/inicio.resx
@@ -133,77 +133,48 @@
         kJAmbKQDpPVD5ISF+lhDX5MxH6Rx7sXxVu7zH/VFD/UFw1OCAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="BunifuTileButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEEAAABBCAYAAACO98lFAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA37AAAN+wELdzWbAAAAB3RJ
+        TUUH4QsSFiQ6s0MrVAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMpSURBVHhe
+        7ZtLiI1hHIdnmhpETWlcFyalWCkyjHJZ2aBII7cFzY6mRDGTJpcloWwsRGhKksnMYiwom1GKpCSRhoX7
+        LdeS63j+3/tDNqfzvueo8/+cp57Fmeb7n/eZy7l833tqKomhoaFleBgv41u8j+dwN07Ut+UTApuwHwth
+        P5SNWKvD8gNRM/EjFkuPDs0HBI3Eu1laHO0a4R9i7P8/hU84VWN8Q8iLLCmNrRrjFyImhZZkTmmUX4hY
+        HFqSualRfiFiWmhJplej/EJELb7PctLo0ijfEGKvBlP4gS0a4xtCJuBLq4pkv0bkA4LsAdJ+s8VyDet1
+        eH4gaj7etsICfMdDOEqH5Q/i6rEDL+ErNL7hHTyNzfrW/weix+MI3axSpUqVKlXyCE91dhqtGdfjPrST
+        qg/Qzi3ewj48iG04TIf5x2KwFXvxCxaL/XDWoM+zyrZwtJfAR/ANlsIV9PUSmQXbb37QVl9GujXeByx4
+        QVh32dmgu6h8WOyusObf2HkCe/NT6r/FQ91F5cNij+MBXIij9eUMbo9Be1ZIpVGj/ENMT2iKZpFG+IeY
+        1aEpms0a4R9i5oWmaDZphH+IsceLFNZphH8sJjRFk6vHhM7QFM1YjfAPMWdCUxSPdXg+IOhR6IqiX4f7
+        hxjbl5RCh0b4hxg7l5DCdI3wDzF2ASWW/DweEFOHr7OsOI5phH+ImRuaomnVCP8Qsyc0RfEVGzTCP8Rc
+        zbLiGNDh/iGmEe2yeiw7NMI/xKS+X5ihEf4hpjs0RfEU87GR20IwZdfqCY3wDzGzQlM0qzTCP8R0haZo
+        xmmEf4i5GJqiGNTh+YCgXxuwYvB11akQxKTuYt+iEf4hZmloiiZX7xdsr0EKczTCP8RsC03RzNYI/xCz
+        MzRFs1Ij/EPMitAUTZ9G+IeYUj7jZJ+Sm6xRGdxuwBa0cxPn9eXKh8U+w1L4gPfwSXbrDyd1F5UPi10b
+        1lx22nQXPmDBtomrnNhfRZPG+4AFD8cLtvoS+Ix2Cc8+JVOn0f5g8UvQNm7GcB3b8a/tP64hxq4/2G6V
+        vXgWb+A7fI4DeBS343KcosP+MTU1PwGBmPSGdYuKUAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="BunifuTileButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
-        TUUH4QsLEgkhMxQIngAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAA8vSURBVHhe
-        7Z0HrC1FGcfpHekPkN7EgoAQ8AkEUWqki6ig4COINJWiRqWDCoioYATsBSUREFCCSOAJ8ghNBRVQNIqI
-        AjYUFSzY8Pff852Te+6WM7sz2+6dX/LPezszO/Odmbm7s1MXaoNnn312E/Rp9DfkwoPobWgRiyLSZyjI
-        +SrVCuxlUUT6CoW4waAsK/F1iybSVyjEuYOyrMRdFk2kr1CIsQLMNCiYbdGH0a5oYXPOBP9aKwBhVkIn
-        oneglc05Ugdk8GLoK2gqt6MVLEgK/GqrAPjvgaZ+Wfwd7WPekZCQsSr8K5XLGdyFMisB7rVUAPxehf6Z
-        hBrnGRQrQUjI0KLCHzJWCfj/omhf9G1UlafRh9BGFm0C13uirMIfEitBKMhIl8IfokrwPHQS+pUcAvE/
-        dD3aC+2HVMCTiJXAFzKwTOF3kVgJqkLG9b3wh8RKUBYybKYU/pBYCcpAZs1Lsm1m8Se0tP3ESBFklBpz
-        M5F59hMjRZBRdT/+n0Q/RholvBbdh1yHin3Y2X5ipAgyakekT69Q/AvdiN6K1rVkUuC3BtoBXYj+ikLy
-        ACrsto5Mgcw6GvlWgv+iL6LcQs+De1ZA6uN/GPnyC7SeRR1xhUzzqQR3o80tqsoQh3oUz1WEFXkIla6A
-        EYPMq1IJvoyWsigKIdwS9t9CCHcAegqV4edoHYsiUhUy8cwkO9041W5Lgd+a6J3oc+hOpMag+B36DvoM
-        Uvsj812N+wuQCtUFNSrXtlsjPpCRlyVZOplL7JYxcF8RnY1cW/oq5EPs9jFwVyVwjWcbuy1SFTJxDnIZ
-        fLkFLWa3jcDttUidMFW4Cq1qUY3AzbWj6gt2S6QqZOJ7B3lZiIZt17BbRuD2evQfBfBAT4PVLcoRuF2a
-        +BbzD7SK3RIpC5mnFvgjyskJnGG3jMDtQORb+EPuQctb1AlcL4s0I2g7tBlaD62K9IrYBekpcQqKr4Ei
-        yKAN0cfQb9Gfp+kvaBJqwC1n0SVwvT5yeW24oHj0VbGxRV8J7leFORSp9/Gn6F6kfganr5UZCxlwB/Lh
-        XItqBG5q5fvyKDoVpR7/PhDfwuiVSHMbVbmON6/ZBz9ej05ftrPoErjeFPk8+r+H9PpINShDQxqroT3t
-        cvbBj9c71Ac9/sfW73H9icSnPOpsOg/VXvARg8z2rQDXWFQjcPvhwKsUf0RxHWDTkOm+FeAiiyqB66XQ
-        vxMfd9QGKdVdS3i9x1+C9Kp4OzoHfR5djNRueDPStPGg7YcZBxnkWwFOtqgSuNaKoTJoybjTI59wyyDN
-        CFZ38ePIBb1W1MV8GtraoooMIVN8K8CRFlUC1/r+duUGtKjdmgthlkYaP3gC+aKnzcst6giZ4VsBTreo
-        Erh2/arQBhC5y8kE/pqYeiR6DIVGawy2sKRmL2SCbwUY62vnWp9Vk9C4wCZ2Syb4r4y+pcA1orbKsZbk
-        7IQM8K0ACyyqBK7VOCvqAVSmF87Lw/+FyHXINwT6bF3ckp9d8MN9K8CjFtUI3IoGad5jwTLBfzfk0v0c
-        Gq1fLHwlzUj40dskP9+PLS26BK63GDin+A3KnZePnwZxQk8ELcM30OzblIofrdmyPlxsUY3ALev9ndvn
-        jt9z0E+SUO3yPjNp9sCP1nCqpmxXnfypR/ayFl0C1y9FGosfkvvXj7vaDV9ToA6gPNjfTJtd8MO11Yrm
-        5U/V2sjl+/sIi2YEbvug4aBQ0V+/Jp12Cb2G5ph5ETJDAzSTUCVZy24ZgdvhSL12eX/96jqu4zvfl/PN
-        xAiZoQkjWuAxiVtRqmcPtw3tvynwUz9+F9Gk0/gUGEJmqIXswpl2y0QIq79+1z79NohPgSFkhrZgc0FP
-        iuPstkIId2xyR3fRU6BwQin+z0caoHLRy+y2foHh6iwq2pApC43YFa74wb/q/sFNcrCZmwK/qwdBSqFP
-        7p0siu6DsVUKf8htaGwm7xDcNcJXNd4myV1XgF+VCiDutCi6DYb6FP6QFS26MXDffeDdeR4zk1Pgd/Ig
-        SCU2tWi6CQZujnwLPzVOMAS/8wdBesFmZvYYuPtU4rkWTTfBQK3p9+UGiy4FflXmDbbFCWb2GLi7DH3n
-        0fkKoAkbvuR+RuGnPX37QmqsYwh+WkxTBacKQLidkPpKml3eRoKun31FHGPRjYH7cgPv3vBVMz0FflUH
-        0gorAP5aWTX1KalxlZPMu35ITIXku1PYGyy6MXD3OUGkDW4101Pgt2AQpDS5FQA/Ff4vk1BpnDvavCEx
-        7dHjUwkyV9zgrpHCPvGgmZ4Cv6qjmNpwI/WJjFtR4Q85y4LXD4n5VILtLZoxcNeGz33iCTM9BX4+ayA1
-        6ngRepHF5VL4Q5qbt0BiZSqBfsDeSNPCMr91cT8M9QnNEcicKYS7Tk0JgaakuRb+kPebGfVDYi6VQD9g
-        fbslF8IcnITuD8+Y6Snw019wm3zATKkfEiuqBE6FLwjnOxG1aR4301PgN/34nDY428ypHxLLqgTOhS8I
-        W3b5WNvcZ6anwO+mQZDWOc1Mqh8SWxJppw3NEdDxrqWmUxN+I9QnbjHTU+CnXUa6gPoJ+nFiGoZq7mGf
-        uNJMT4FfyGNxfDnazOo2GLoIcpli1hUy9z4U+E3dr1ATYLWtjbbIVQeRVjc12eW9lZnVfTA2xFhDU2TO
-        cMJ9CaS9Ed+NtBgmc6Uz7nri7Y/0aVx1v8RJ3G7J9QMM1mYOfSHYVC7i0orn16GfKeJA6NyF1B6NnQaD
-        j0pM7z465yD4NnLEqYqg9RC/Rz78CPVvFxSM3jIxv/vcYybXAvGvg76fpFQejUT2c+o6husvwHXD5zbJ
-        bQAOIYwmhuhzWL2C6hdQv4g2vVIBacndWUiLcPN2QNcGltegMtyPVrMo+gk/QAtJus5hZm4K/HRCqvYW
-        mLoGsgidWvJGlKoIuOnLSGcnuXKd3dpf+BFqPXcZfaquaeaOgfsrzL8K2vc4tUMKbssj1wkmSnsDu7Wf
-        8APWRVVXJDfBjWZqCvw+NQhSGX0O7mLRjcBNy/BcPxXPs9v6Cz+iy6+BQ83MMXDXDup/SEL4oS+M1CIR
-        3E5IfCejBbn93uiaH/CW5Kd0DzVQx3ZAH4J7ma3wJqGKNPYo51odTGovuKAGpkZXp6sfW+RjqHYDC7Wt
-        fEguMxNT4PfJQZBg3GZRj8DtoIGXF/pS2NWi7C4YWXWJVZ3sbuaNgbse/76dN1nsZ0kkcK2nQIj9ku63
-        KLsLRm6NutQYvNtMS4HfzoMgwXnAkhiB2xUDL2+6/zrAyC4dVZ+7jyF+nx0EqYVkcugQrg8ZOHuzh0XZ
-        XTDS95CJUMw3k1Lgp1m7arnXxSmWVALXSi8E3a8AAkPr/OtyZVszJwV+dds31rvHtdoBIV6NvakAGhhx
-        7Vatg6vMlBT4bYzKnoNQlnstuRG4hWhw9qMCCIw9ZmBz4+jom8xuX4Hfl5JQ9ZKafYxbiFXU/akAAoOb
-        bhDqMbubJZ8CP21h28QUttQSNNxcO4SK6F0F0NTzED/clcLFFfhfPghWO9dakglcq88hxGunXxVAYLTG
-        z5voIdQ+RoWnluCvXjk1AB9GdfIRSzKB69n1FTAdDNcSsjobXhp6zX3vZ0F4LW3X7qc61Dr0J+HhlkwC
-        1xpyDkE/K4CQ8UgHU4dGf/krWTKV4H7tpayziUOsDdCG29PPRtYsoxD0twIIfoBeByH73zX9KtgwKnHp
-        Xb0v8jni5gKLbgRuIVYd6Qn6XIuyv/AjNkH36Rd5oJb8BWjiSWVVIW6dVVj23APZtZFFkcB1qPWTV1uU
-        /Ycfo3lzWpNYpTGmnTzG+trrgnQWR8ejJ5ELY2cvCtxcN55Qx9n0E9+lh5D2MezmxFEMWxFtj45A+qvU
-        bFqnDQ8Ipy5SvR8fQUXo8XczclrYQbg1kc4yVD/EGUinkqoPoNJZxty3Kpq03d4VFnwEbqsj1xnTO9ht
-        3QdjX4x0rKsmReahFUPOGU7YVZC2UlOF0AzdDyLNvNVSrSUt2EQIq8GovCeLGqFq9Wt0rvQKXO7RMbZZ
-        Xdw6JX36SSs6PUWV0IXcZeudASM18VMHTpQ5Bu46tIxFUTukNRe5nko6fKroU7BwM+ypEHYrNLVzS2cc
-        pxqiuOmEVFe6uxoY49RoU+dJ1W9lbUJReLhkCEjjTajqApVfIz15ck9CmwrhtEj0MrSvOY2Bu752XPPr
-        KZS5EXerYJQKXtumhOg712NTrwznvzRXiFN2hjqZVANJ70KVD5/kXr2yVKFcyZ2z2AoYpHeXWr51rIfX
-        6tcdLSkviEe7m+gk8Tq2qv8BKn0eMfe8GpXt7FI3+T4WRbtgiBYzNDG/X42m41DpBZHco+/qj6MQJ5AX
-        oUe4nlquR+IrbNVJH+1XAgxQi7uOrtoi1BDT/kTaRFlH0+nxmZxLwL/qK9BRd/rE1FiCduRs40DK76K1
-        k0zKAX89Nb+pwB60VwlIuGtr+zSNus45e2XRO72w8wl/rSz2PTZPlWBvi7J+SEx/ZRcq5chEtM6vsLMG
-        f/Vj+DaatW198MZyChLRuv6mJkjMFPQ1k/npNwT/05OQfhxk0dUHiVwySCtSEn11FG0Rr6eqOph8qPc1
-        QAJdP+ev6+gxva5lZwr8NBZRddhb4yL1HX1P5FoRW+fsnNmCZvlmrjoW+Gmn9bKoV7C+QSEi1zSouva3
-        m40UjtHjr40mXam38AUJXJ8kFQnJgZa9KfDTMbMuNFL4r0mSioRGW8rmbUChDiLt/1dEI4WvTYtkaKQe
-        io7VK1oZXH/hCxL5aJJcpC7UqM47lVT9LVkTVBor/DmoiYUZs53LLctT4Dd9nWQzhS9IyOdg5Ig7egpk
-        DhrhvhRS34G6iTX41cxOHySkx0+ZyQkRP3LXJuKnWURr2WUzkOABsirSGNoqrjv7/WFMqKlSEXfmWfa3
-        C4ashbq8fetM5SYrgnbBEM3rizSPNshqfxUPRtyRmBNpg6OsGNoBA7q+e/dM52YrinbAgDKrUiLh0fd+
-        e4c/kbhmskba5VgrjmYhYc3tj7TPAiuSZiFhLYWOtM/TViTNQsJaZBHpBo2tjB5BoucM0o50gOYPgyLR
-        EwdpR1pG08ebPwaeRLXTRpsbNUcGXGpF0jwkPmk/m0j9BDuoujQkrlW1Omgo0g7nWlG0B0Zoo+b5iTmR
-        ptBA0JFWBO2DMdrnTmvrtQ5Q++nG8YHwaF8i/aFpUejWlvUNsNBC/wc3D9k/RSBxBwAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAAEEAAABBCAYAAACO98lFAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA37AAAN+wELdzWbAAAAB3RJ
+        TUUH4QsSFiIxcstVWgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOuSURBVHhe
+        7Zs/SFVRHMefqPhvEHFxdapVJ5emHDTcaxHUyU2IaHaUQBcJJBDSIZIS2oMIhBZTAgkcolAK2oKGWqrb
+        53vP7+K7vvtP73u91/N84Mvp/P6cc88X3rV3r1YCT+BNAG8CeBPAmwDeBPAmgDcBZMJT03cF4A2KYu0o
+        nU/ovGGsEsHkWBm4Y6G2ROdzxwyOLXSGgi7nTRDeBPAmgDcBvAngTYCGmsD62+h1hrattCGwfkuYEO2T
+        Ru3F1RHW9yawvjeB9b0JrO9NYH1vAut7E1i/JUzYQ19NP5DQGMX2rLQhsH7zTaiGvTbclsGGhRoOe3kT
+        2MubwF7eBPbyJrBXfU2gdhWdf5p7EX1AQmNSvqhW7ZJyobbuJkQ9zab2QClQ2zATnqPlS+gtEhqT8nnS
+        vqIlTLjUfYS+UvcE+tIPlAK19TOBul70KewIgkULF4aeDvQk7HZjh6UKQ89i2O2uo9fCmVBX3gTy3egB
+        +qbiKvR6a8LKMqFuDn1UUxWaz1lJJtRNoOh1WoSuR9fVbWWJkC9nAjkZ8DKsSkbfAaatPBHy+ixnsWyl
+        iZCfRtF3jiR0falGkCttwpIryeQz6reWGMTH0G8VZaD8mLXEIN6PtH4eS9ZSA7nSJpy4klzmrSUG8S2X
+        zmXLWmIQn3fpXE6spQZylzeB+KBLF2LN2mIQP3TpXA6tJQbxNZcuxKC1xSBeyoRhly7EurXFIH7k0rkc
+        WUsM4usuXYhha4tBvPTH4dSV5LJgLTGI68VLERJfwBBfcOlcTq2lBnKlTVhxJZnoR9WItcQgPhVW5DNl
+        LTGIj6DzP5qTWLGWGsiVNqEHvQ+r0pm18kTIb7qyVDatNBHys64sFV1fj5XXQK6cCYL8EEq6y39BM1aW
+        CjWd6D76iarRXPFOK02Fmhmk/c7zGA1ZWSLky5sQQd0ouo30f4cbqM9ShaBeN9pb6K6NiTeyNKjvQ9pX
+        ++s6Ri2VCXX1M+F/Redzx/QmCG8CeBPAmwDeBDgzgcmOi11ZdmTCgfv3leVAJnSha+h6E6R3BkJjUr7R
+        0rm77EPRHLiAf/4GqqXg4APoVWiBGwcsdTXgwJMoelwfofmklbQ3HHQc/dGpQQ9NH9koFB+30vaFQ0ZP
+        l96h8GuzRpuLhv5ab0vAIffdWYN7FgrR3IWDfQu1Lxwyeon6wkIhmrtw8MxC7QuHjB6P/UIP0U0bNReZ
+        j+faBg66685bw66VtD8cVm+k9VhM9wf9faJGzS/8Zro8lcpfzjStnibRHYgAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="BunifuTileButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
