--- a/AED_FINAL1/AED_FINAL1/vendedor/vendedor_alquiler.resx
+++ b/AED_FINAL1/AED_FINAL1/vendedor/vendedor_alquiler.resx
@@ -201,4 +201,7 @@
         zPELMMcfhmEYhmEYhmEYGnK7/QOkOuM1DLaEEAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="DatabaseDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>144, 4</value>
+  </metadata>
 </root>
